# c4ai-ml-agents

./: .coverage  .env.example  .env.test  .flake8  .gitignore  .pre-commit-config.yaml  BEGINNER_GUIDE.md  CLAUDE.md  EXAMPLE_EXPERIMENT.md  LICENSE  MANIFEST.in  Makefile  README.md  ROADMAP.md  Reasoning_LLM.ipynb  config.py  conftest.py  pyproject.toml  requirements.txt  script_architecture.md  setup.sh  test_local_api_extended_results.json
.github/workflows/: publish.yml
documentation/: CLI_Testing_Guide.md
documentation/ADR/: 200821_Output_Parser.md
documentation/phases/: phase_1.md  phase_10.md  phase_11.md  phase_12.md  phase_12a.md  phase_12b_testing.md  phase_13.md  phase_13_results.md  phase_14.md  phase_14_IMPLEMENTATION.md  phase_15_structured_answer_extraction.md  phase_15a.md  phase_1_handover.md  phase_2_handover.md  phase_3.md  phase_3_handover.md  phase_4.md  phase_4_close_out.md  phase_4_completion_summary.md  phase_4_handover.md  phase_5.md  phase_6.md  phase_7.md  phase_8.md  phase_9.md  phase_9a.md
documentation/research/: research_execution_plan.md
examples/: README.md
examples/configs/: advanced_reasoning.yaml  comparison_study.yaml  single_experiment.yaml
examples/scripts/: batch_experiments.sh
scripts/: extraction_test_results.json  extraction_test_results_debug.json  install-sqlite-mcp-server.sh  test_extraction_with_output.py  test_local_api.py  test_local_api_extended.py  test_local_api_results.json  test_local_benchmark.json
scripts/phase14/: README.md  base_test.py  generate_report.py  regenerate_report.py  run_full_comparison.py  scale_test.py  test_chain_of_thought.py  test_reasoning_as_planning.py  test_tree_of_thought.py
scripts/phase15/: instructor_hooks_output.json  test_instructor_hooks.py  test_structured_extraction.py
src/: __init__.py  config.py
src/cli/: __init__.py  commands.py  config_loader.py  display.py  main.py  validators.py
src/core/: database_manager.py  dataset_loader.py  dataset_preprocessor.py  dataset_uploader.py  experiment_runner.py  reasoning_inference.py  results_processor.py
src/ml_agents/: __init__.py  config.py
src/ml_agents.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ml_agents/cli/: commands.py  config_loader.py  display.py  main.py  validators.py
src/ml_agents/cli/commands/: __init__.py  db.py  eval.py  preprocess.py  results.py  setup.py
src/ml_agents/core/: __init__.py  benchmark_registry.py  database_manager.py  dataset_loader.py  dataset_preprocessor.py  dataset_uploader.py  experiment_runner.py  local_test_dataset.py  phase14_analysis.py  phase14_comparison.py  phase14_test_data.py  reasoning_inference.py  repository_manager.py  results_processor.py
src/ml_agents/reasoning/: __init__.py  base.py  chain_of_thought.py  chain_of_verification.py  none.py  program_of_thought.py  reasoning_as_planning.py  reflection.py  skeleton_of_thought.py  tree_of_thought.py
src/ml_agents/reasoning/prompts/: base.txt  chain_of_verification.txt  reflection.txt  skeleton_of_thought.txt  tree_of_thought.txt
src/ml_agents/utils/: __init__.py  answer_extraction.py  api_clients.py  env_validator.py  instructor_clients.py  logging_config.py  output_parser.py  rate_limiter.py  reasoning_extraction.py
src/reasoning/: __init__.py  base.py  chain_of_thought.py  chain_of_verification.py  none.py  program_of_thought.py  reasoning_as_planning.py  reflection.py  skeleton_of_thought.py  tree_of_thought.py
src/reasoning/prompts/: chain_of_thought.txt  program_of_thought.txt  reasoning_as_planning.txt
src/utils/: api_clients.py  env_validator.py  output_parser.py  rate_limiter.py
tests/: __init__.py  conftest.py  test_config.py  test_integration_database_persistence.py  test_integration_reasoning.py
tests/cli/: test_commands.py  test_config_loader.py  test_db_commands.py  test_display.py  test_integration_smoke.py  test_main.py  test_preprocess_commands.py  test_setup_commands.py  test_validators.py
tests/core/: test_benchmark_registry.py  test_database_manager.py  test_dataset_loader.py  test_dataset_loader_benchmarks.py  test_dataset_preprocessor.py  test_dataset_preprocessor_multichoice.py  test_dataset_uploader.py  test_experiment_runner.py  test_phase14_integration.py  test_reasoning_inference.py  test_results_processor.py
tests/integration/: test_benchmark_integration.py
tests/reasoning/: __init__.py  test_base.py  test_chain_of_thought.py  test_chain_of_verification.py  test_none.py  test_program_of_thought.py  test_reasoning_as_planning.py  test_reflection.py  test_skeleton_of_thought.py  test_tree_of_thought.py
tests/utils/: test_answer_extraction.py  test_api_clients.py  test_env_validator.py  test_logging_config.py  test_output_parser.py  test_rate_limiter.py
